# polybench-doitgen-jacobi

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  bsub_benchmark_bsubs.sh  bsub_benchmark_one_bsub.sh  bsub_benchmark_rand_and_seq.sh  compile.sh  euler-startup.sh  mpi_time.sh  polybench.cpp  polybench.hpp  requierement.R
R/: .Rhistory  example.R  export_summaries.R  generate_plot.R  io_summary.txt  kernel_summary.txt  lsb.doitgen-openMP.r0  lsbpp.R  lsbpp_fun.R  overall_summary.txt  script.R  summary_init.txt
R/antoine/: fonts.R  generate_plot.R  generate_plot_2.R
doitgen/: doitgen.cpp  doitgen.hpp  doitgen_generate_sub.py  doitgen_mpi_plot.py  doitgen_single_sub.py  info.md  out.txt
doitgen/benchmark/: CMakeLists.txt  bsubBenchmark.cpp  openMPBenchmark.cpp  openMPBenchmark_papi.cpp  openMPBlockingBenchmark.cpp  openMPIBenchmark.cpp  sequentialBenchmark.cpp  writeBenchmark.cpp
doitgen/test/: CMakeLists.txt  generate_datasets.cpp  main.cpp  openMPITest.cpp  openMPTest.cpp  out.txt  serializer.cpp  serializer.hpp
jacobi/: array2dr.hpp  jacobi1d.cpp  jacobi1d.hpp  jacobi1d_mpi.hpp  jacobi2d.cpp  jacobi2d.hpp  jacobi2d_mpi.hpp  jacobi2d_omp.cpp  jacobi2d_omp.hpp  jacobi_mpi_collect.py  jacobi_mpi_sub.py  mpi.ipynb  mpi_plots.R
jacobi/benchmark/: CMakeLists.txt  mpi1d_benchmark.cpp  mpi2d_benchmark.cpp  now.cpp  omp1d_benchmark.cpp  omp2d_benchmark.cpp  openMPBenchmark.cpp
jacobi/test/: CMakeLists.txt  check1d.cpp  check2d.cpp  main.cpp  mpi.cpp  mpi2d.cpp  omp1d.cpp  omp2d.cpp
jacobi_1D/: jacobi1d_mpi.hpp  jacobi2d.hpp  jacobi2d_mpi.hpp  jacobi_1D.cpp  jacobi_1D.hpp  jacobi_mpi_collect.py  jacobi_mpi_sub.py  mpi_plots.R
jacobi_1D/benchmark/: CMakeLists.txt  main.cpp  mpi2d_benchmark.cpp  mpi_benchmark.cpp  now.cpp  openMPBenchmark.cpp
jacobi_1D/test/: CMakeLists.txt  check1d.cpp  check_output.cpp  jacobi1dMpiTest.cpp  main.cpp  mpi.cpp  mpi2d.cpp
plots/: .RData  .Rhistory  doitgen_mpi.R
polybench/linear-algebra/kernels/doitgen/: doitgen.c
polybench/linear-algebra/solvers/gramschmidt/: gramschmidt.c
polybench/stencils/adi/: adi.c
polybench/stencils/jacobi-1d-imper/: jacobi-1d-imper.c
polybench/stencils/jacobi-2d-imper/: jacobi-2d-imper.c
report/: background.tex  bibl_conf.bib  conclusion.tex  doitgen_mpi.tex  doitgen_openmp.tex  experimental_setup.tex  introduction.tex  jacobi_mpi.tex  jacobi_omp.tex  report.tex
report/data/: 0112165034_no24M_lsb_runs.csv  0113132911_1dghost_lsb_runs.csv  1222155458_1dghost_lsb_runs.csv  1223050254_2d_lsb_runs.csv  jacobi1d_nodes_m_runs.csv  jacobi1d_nodes_m_runs.py
report/doitgen_openmp/plots/: blocking_scale_data_plot .R  classic_data_plot.R  optimized_data_plot.eps  scaling_plot.R
report/doitgen_openmp/scripts/: bsub_1D.sh  bsub_classic.sh  bsub_matrix_scale.sh  bsub_openMP.sh  bsub_openMP_scaling.sh  bsub_optimized.sh  bsub_sequential.sh  generate_bsub.py  generate_bsub_new.py
report/jacobi_mpi/: mpi_plots.R
report/jacobi_mpi/data/: 0111231315_vstack_lsb_runs.csv  0112164900_no1M_lsb_runs.csv  0112164922_no4M_lsb_runs.csv  0112164932_no6M_lsb_runs.csv  0112165024_no16M_lsb_runs.csv  0113033458_no2M_lsb_runs.csv  0113034907_no8M_lsb_runs.csv  0113035914_vstackb_lsb_runs.csv  0113122558_no48M_lsb_runs.csv  jacobi1d_nodes_m_runs.csv
report/jacobi_omp/: jacobi_2D_omp_generate_bsub.py  jacobi_omp_generate_bsub.py
results/: 1222155458_lsb_runs.csv  1223010000_lsb_rank.csv  1223010000_lsb_runs.csv  1223050254_lsb_runs.csv
scripts/: bsub_benchmark_bsubs.sh  bsub_benchmark_one_bsub.sh  bsub_blocking.sh  bsub_classic.sh  bsub_matrix_scale.sh  bsub_openMP.sh  bsub_openMP_blocking.sh  bsub_openMP_local_sum.sh  bsub_openMP_non_blocking.sh  bsub_openMP_scaling.sh  bsub_optimized.sh  bsub_scaling.sh  bsub_sequential.sh  generate_bsub.py  generate_bsub_benchmark.py  generate_bsub_local_sum.py  generate_bsub_new.py
utils/: CMakeLists.txt  error_handling.hpp  no_lsb.hpp  serializer.cpp  serializer.hpp  utils.cpp  utils.hpp
